# djinniDemo

./: .gitmodules  run_djinni.sh
AndroidClient/app/: CMakeLists.txt  build.gradle
AndroidClient/app/src/androidTest/java/de/jaetzold/androidclient/: ExampleInstrumentedTest.java
AndroidClient/app/src/djinni/: generated  idl  support-lib
AndroidClient/app/src/main/: AndroidManifest.xml
AndroidClient/app/src/main/java/de/jaetzold/androidclient/: MainActivity.java
AndroidClient/app/src/main/res/layout/: activity_main.xml
AndroidClient/app/src/test/java/de/jaetzold/androidclient/: ExampleUnitTest.java
ObjCClient/ObjCClient/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.m  main.m
ObjCClient/ObjCClient.xcodeproj/: project.pbxproj
ObjCClient/ObjCClientTests/: ObjCClientTests.m
ObjCClient/ObjCClientUITests/: ObjCClientUITests.m
cpp/: greeting_service_impl.cpp  greeting_service_impl.h
idl/: greeting.djinni
